--- a/src/8021x.ui
+++ b/src/8021x.ui
@@ -106,15 +106,15 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="row_spacing">6</property>
-                    <property name="column_spacing">12</property>
+                    <property name="column_spacing">6</property>
                     <child>
                       <object class="GtkLabel" id="network_name_label">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="label" translatable="yes">_Network name:</property>
+                        <property name="label" translatable="yes">_Network name</property>
                         <property name="use_underline">True</property>
                         <property name="mnemonic_widget">network_name_entry</property>
-                        <property name="xalign">0</property>
+                        <property name="xalign">1</property>
                       </object>
                       <packing>
                         <property name="left_attach">0</property>
