--- a/src/libnma/wifi.ui
+++ b/src/libnma/wifi.ui
@@ -68,7 +68,7 @@
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="row_spacing">6</property>
-            <property name="column_spacing">12</property>
+            <property name="column_spacing">6</property>
             <child>
               <object class="GtkVBox" id="security_vbox">
                 <property name="visible">True</property>
@@ -88,10 +88,10 @@
               <object class="GtkLabel" id="security_combo_label">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Wi-Fi _security:</property>
+                <property name="label" translatable="yes">Wi-Fi _security</property>
                 <property name="use_underline">True</property>
                 <property name="mnemonic_widget">security_combo</property>
-                <property name="xalign">0</property>
+                <property name="xalign">1</property>
               </object>
               <packing>
                 <property name="left_attach">0</property>
@@ -120,10 +120,10 @@
               <object class="GtkLabel" id="network_name_label">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">_Network name:</property>
+                <property name="label" translatable="yes">_Network name</property>
                 <property name="use_underline">True</property>
                 <property name="mnemonic_widget">network_name_entry</property>
-                <property name="xalign">0</property>
+                <property name="xalign">1</property>
               </object>
               <packing>
                 <property name="left_attach">0</property>
@@ -145,10 +145,10 @@
               <object class="GtkLabel" id="connection_label">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">C_onnection:</property>
+                <property name="label" translatable="yes">C_onnection</property>
                 <property name="use_underline">True</property>
                 <property name="mnemonic_widget">connection_combo</property>
-                <property name="xalign">0</property>
+                <property name="xalign">1</property>
               </object>
               <packing>
                 <property name="left_attach">0</property>
@@ -170,10 +170,10 @@
               <object class="GtkLabel" id="device_label">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Wi-Fi _adapter:</property>
+                <property name="label" translatable="yes">Wi-Fi _adapter</property>
                 <property name="use_underline">True</property>
                 <property name="mnemonic_widget">device_combo</property>
-                <property name="xalign">0</property>
+                <property name="xalign">1</property>
               </object>
               <packing>
                 <property name="left_attach">0</property>
